hide header on the first slide

--- a/assets/css/lottie.css
+++ b/assets/css/lottie.css
@@ -22,6 +22,15 @@
     min-height: 1080px!important;
 }
 
+
+#main-header {
+    opacity: 1;
+    transition: opacity .8s ease-in-out;
+}
+#main-header.hidden {
+    opacity: 0;
+}
+
 .ui {
     text-align: center;
     width: 100%;
